StronkaBITEHack/src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Exo+2&family=Montserrat:wght@500&family=Tektur&display=swap');

body, html {
    margin: 0;
    padding: 0;
    height: 100%;
    overflow: hidden;
    scroll-snap-type: y mandatory;
}

body {
    font-family: Arial, sans-serif;
    background-color: var(--body-background-color, #1b2d48);
    color: white;
}

.index-sections {
    overflow-x: hidden;
    overflow-y: scroll;
    height: 100vh;
    scroll-snap-type: y mandatory;
}

.animation-video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: 1001;
    pointer-events: none;
}

.layer {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    transition: transform 0.0s ease;
    pointer-events: none;
    opacity: 0.8;
    z-index: -10;
}

.layer img {
    width: 100%;
    height: 100%;
    transform: scale(1.1);
}

h1 {
    margin-top: 5vh;
}

.container {
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    align-content: center;
    width: 90vw;
    height: 100vh;
    scroll-snap-align: start;
    /*transform: translateY(10vh);*/
}

.header-container {
    position: sticky;
    top: 0;
    background-color: rgba(255,255,255,0.0);
    z-index: 1000;
}

.header-ul {
    list-style: none;
    padding: 0;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
    height: 1vh;
}

.header-button-logo {
    background-color: rgba(255,255,255,0);
    margin-top: 55px;
    width: 13vw;
    height: 10vh;
    color: white;
    border: 0px;
    position: relative;
    cursor: pointer;
}

.header-button-link {
    background-color: rgba(255,255,255,0);
    width: 5vw;
    height: 5vw;
    color: white;
    border: 0px;
    position: relative;
    cursor: pointer;
}

.li-blank {
    width:8vw;
}

.header-button-link img {
    height: 35px;
    width: 35px;
}

.header-button {
    font-family: 'Exo 2', sans-serif;
    background-color: rgba(255,255,255,0);
    width: 12vw;
    height: 5vw;
    color: white;
    border: 0px;
    position: relative;
    font-size: 1.1rem;
    cursor: pointer;
}

.header-button:hover {
    color: #ef8c25;
}

.header-button:hover::before,
.header-button:hover::after {
    content: "";
    position: absolute;
    width: 2px;
    height: 100%;
    background-color: #ef8c25;
    top: 0;
}

.header-button:hover::before {
    left: -2px;
}

.header-button:hover::after {
    right: -2px;
}

nav li {
    margin-top: 5rem;
    margin-right: 1rem;
}

aside {
    position: fixed;
    top: 50%;
    transform: translate(-50%, -50%);
}

aside ul {
    display: flex;
    flex-direction: column;
    align-items: center;
    list-style-type: none;
    margin-left: 4vw;
}

aside ul li .indicator {
    cursor: pointer;
    margin-top: 0.3rem;
    display: block;
    height: 15px;
    width: 15px;
    border-radius: 50%;
    background-color: white;
    border: 1px solid white;
}

aside ul li .active {
    transform: scale(1.7);
    background-color: #ef8c4b;
    border: 1px solid white;
    transition: transform 300ms ease-in-out;
}

@media only screen and (max-width: 768px) {

    aside {
        display: none;
        pointer-events: none;
    }

    aside ul {
        display: none;
        pointer-events: none;
    }

    aside ul li .indicator {
        display: none;
        pointer-events: none;
    }

    body, html {
        margin: 0;
        padding: 0;
        height: 100%;
        overflow: hidden;
        scroll-snap-type:  none;
    }

    .index-sections {
        overflow-x: hidden;
        overflow-y: scroll;
        height: 100vh;
        scroll-snap-type:  none;
    }

    .header-button {
        display: none;
    }

    .header-button-logo {
        width: 25vw;
        height: 25vh;
        margin: 0;
    }

    .header-button-link {
        width: 12vw;
    }

    .layer {
        width: 90vw;
        height: 100%;

        /*display: none;*/
    }
}

@media only screen and (max-width: 420px) {

    .header-button-logo {
        width: 30vw;
        height: 30vh;
        margin: 0;
    }

    .header-button-link {
        width: 12vw;
        margin: 0;
    }

    .li-blank {
        width:0;
    }

    .header-button-link img {
        height: 28px;
        width: 28px;
    }

    nav li {
        margin-right: 0.7rem;
    }

    .layer {
        width: 93vw;
        height: 100%;

        /*display: none;*/
    }
}

